--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,16 +16,22 @@
             <% end %>
           </td>
           <td><%= link_to @book.title, @book %></td>
-          <td>コメント数： <%= @book.book_comments.count %></td>
           <td><%= @book.body %></td>
-          <td><%= render "favorites/btn", book: @book %></td>
+          <td id="favorite_btn_<%= @book.id %>">
+             <%= render "favorites/btn", book: @book %>
+          </td>
+           <td id="comment_counter">
+             <%= render "book_comments/counter", book: @book %>
+           </td>
             <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
             <% end %>
         </tr>
       </table>
+      <div id="comment_index">
       <%= render "book_comments/index", book: @book %>
+      </div>
       <%= render "book_comments/comment", book: @book, book_comment: @book_comment %>
     </div>
   </div>
